# ChatPlays

./: CMakeLists.txt  ChatPlays.vcxproj  ChatPlays.vcxproj.filters
GUI/: CMakeLists.txt
GUI/Header/: MainWindow.h  SettingsWindow.h  TwitchWindow.h  Window.h  settings.h
GUI/src/: MainWindow.cpp  SettingsWindow.cpp  TwitchWindow.cpp  Window.cpp  settings.cpp
Header/: Controller.h  FatalData.h  PS2Math.h  PineClient.h  Window.h  settings.h  twitch.h
Header/Linux/: EvDev.h  connect.h
Header/Windows/: Xinput.h  control.h  winConnect.h
src/: PineClient.cpp  Window.cpp  main.cpp  settings.cpp  twitch.cpp
src/Linux/: EvDev.cpp  connect.cpp
src/Windows/: Xinput.cpp  control.cpp
